Tried preventing code wrapping.

--- a/_sass/devlog.scss
+++ b/_sass/devlog.scss
@@ -127,8 +127,8 @@ code {
   // white-space: pre-wrap; # wrap code
   // -------------------
   // prevent wrap code
-  white-space: pre;
-  overflow-x: auto;
+  // white-space: pre;
+  // overflow-x: auto;
   // -------------------
   word-wrap: break-word;
   word-break: break-all;
